--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -40,7 +40,7 @@
                                 </div>
                                 <div class="form-row">
                                     <div class="form-group col-md-6">
-                                        <label for="phone">Phone</label>
+                                        <label for="phone">Contact_No.</label>
                                         <input
                                             type="number"
                                             class="form-control"
