--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <%-include('partials/header.html')%>
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="/css/login.css">
     <title>Login page</title>
     </head>
 
@@ -26,12 +26,7 @@
                                 </div>
                                 <button type="submit" class="btn btn-primary">Login</button>
                             </form>
-                            <div class="">
-                                <% for(var i=0; i< errs.length; i++){ %>
-                                    <%= errs[i].message; %>
-                                    <br>
-                                <% } %>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
